style.css
body {
font-family:'tahoma', sans-serif;
background-color: #0B0C10;
color:#CCFFCC;
margin:0px;
font-size: calc(13px + 0.390625vw);

}

#badness {
background-color:#7E6B8F;
color:#0B0C10;
border-radius: 10px;
min-height: 0;
min-width: 0;
overflow:hidden;
overflow-y:scroll;
max-height: 25vh;

}

#yellow {
background-color:#5CB8FF;
border:none;
color:#0B0C10;
display:flex;
flex: 1;
flex-direction:column;
min-width:500px;

}

#pie {
background-color:#0B0C10;
width:300px;
height:300px;
border-radius:50%;
background: conic-gradient(#8FF599 0.00% 33.33333333333333%, #5CB8FF 33.33333333333333% 66.66666666666666%, #7E6B8F 66.66666666666666% 100% );;
align-self:center;

}

#graphics {
display:flex;
flex-direction:column;
}

#legend {
display:flex;
justify-content:space-around;
align-items: center;
margin-top:2%;
}


#databasedash{
background-color:#0B0C10;
max-height:400px;
overflow-y:scroll;
border-radius: 10px;
border-style: double;
border-color:#CCFFCC;
}

#databasemain{
    background-color:#0B0C10;
    overflow-y:scroll;
    height:70vh;
}

#navbar {
margin:0;
padding:0;
margin-bottom: 60px;

}

#container {
display:flex;
flex-wrap:wrap;
margin-top:2%;
}

#right {
display:flex;
flex:1;
flex-direction: column;
align-self:center;
width:auto;
border:none;
padding-bottom:0;
}

#footer {
    bottom:0;
    text-align:center;
    background-color:#1F2833;
    padding: 15px;
}

#footerapi {
    bottom:0;
    text-align:center;
    align-self: center;
    background-color:#1F2833;
    padding: 15px;
    width: -webkit-fill-available;
}

#expander {
font-size:1.5em;
height:70vh;
padding:30px;
border-radius: 10px;
border-style: double;
border-color:#CCFFCC;
display:flex;
flex-direction:column;
gap:3em;
overflow-y:scroll;
}

#submitform {
    display: flex;
    padding-bottom: 40px;
    gap: 1em;
    align-items: center;
    justify-content: center;
}

#pantryformbut {
    display:flex;
    justify-content:center;
    gap:2em;
}

#dashformbut {
    display:flex;
    justify-content:center;
    gap:2em;
    margin-bottom:45px;
}

#submititem {
    cursor: pointer;
}

#clearitem {
    cursor: pointer;
}

#clearpantry {
    cursor: pointer;
}

#greenbox {
background-color:#8FF599;
width:30px;
}

#bluebox {
background-color:#5CB8FF;
width:30px;
}

#blackbox {
background-color:#7E6B8F;
width:30px;
}

.recipetitle {
text-align: center;
margin-top: 90px;
}

#edamam-badge {
    display: flex;
    justify-content: center;
}

#recipetitle2 {
    display: flex;
    text-align: center;
    flex-direction: column;
    justify-content: center;
    }

#recipesearcher {
    display: flex;
    min-height: 5vh;
    flex-direction: column;
    align-items: center;
}

#apidisplay {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

#recipes {
    display: flex;
    justify-self: center;
    background-color: #0B0C10;
    overflow-y: scroll;
    max-height:60vh;
    width: 90%;
    flex-direction: column;
    justify-content: flex-start;
    padding: 3vw;
    margin: 20px;
}

#apisearch {
    margin-bottom:15px;
}

#apisearchbutton {
max-height:max-content;
    cursor: pointer;
}

#creditscontainer {
    display:flex;
    flex-direction: column;
}

#creditsfooter {
    margin-top:3%;
    bottom:0;
    text-align:center;
    background-color:#1F2833;
    padding: 15px;  
}

#filters {
    margin-bottom: 2vh;
    display:flex;
}

table {
vertical-align: middle;
margin-left:auto;
margin-right:auto;
border: 2px #CCFFCC solid;
border-collapse:collapse;
font-size:1.3em;
background-color:#0B0C10;
max-height:100%;
table-layout:fixed;

}

.almostexpiredfood {
    vertical-align: middle;
    margin-left:auto;
    margin-right:auto;
    border-collapse:collapse;
    font-size:1.3em;
    color:#CCFFCC;
    background-color:#5CB8FF;
    max-height:100%;
    table-layout:fixed;
    
    }

.almostexpiredfood td {
    background-color: #5CB8FF;
}


td {
border: 1px solid #CCFFCC;
padding: 10px;
text-align: center;
overflow:hidden;
text-overflow:ellipsis;
white-space:nowrap;
}

th {
border: 1px solid #CCFFCC;
padding: 10px;
text-align: center;
background-color:#0B0C10;
overflow:hidden;
text-overflow:ellipsis;

}

tr:nth-child(even) td {
    background-color: #1F2833;
}

tr:nth-child(odd) td {
    background-color:#0B0C10;
}

li {
float:left;
border-right:solid 1px #CCFFCC;

}

li a {
display:block;
color:#CCFFCC;
text-align:center;
padding: 20px 25px;
text-decoration:solid;
font-weight:bold;

}

li a:hover {
    background-color:#1F2833;
}

.heading {
text-align:center;
margin-left:auto;
margin-right:auto;
font-weight:bold;


}

.navul {
    position:fixed;
    display:flex;
    flex-wrap:nowrap;
    top:0;
    width:100vw;
    background-color:#0B0C10;
    list-style-type: none;
    margin: 0px;
    margin-bottom:1%;
    padding: 0px;
    overflow:hidden;
    border-bottom: solid 1px #CCFFCC;
}

.navli {
text-wrap: nowrap;
width:min-content;
}

.bordereddiv {
border-radius: 10px;
border-style: double;
border-color:#CCFFCC;
padding:15px;
}

    .bordereddiv::-webkit-scrollbar {
        width: 10px;
        height: 10px;
    }

    .borderddiv::-webkit-scrollbar-thumb {
    background-color:#CCFFCC;
    border-radius: 5px;
    }

    .bordereddiv::-webkit-scrollbar-track {
    background-color:#1F2833;
    border:1px solid #45A29E;
    }

    .bordereddiv::-webkit-scrollbar-button {
    background-color:#45A29E;
    border-radius:5px;
    }

.unbordereddiv {
padding:15px; 
}
.unbordereddiv::-webkit-scrollbar {
    width: 10px;
    height: 10px;
}

.unborderddiv::-webkit-scrollbar-thumb {
background-color:#CCFFCC;
border-radius: 5px;
}

.unbordereddiv::-webkit-scrollbar-track {
background-color:#1F2833;
border:1px solid #45A29E;
}

.unbordereddiv::-webkit-scrollbar-button {
background-color:#45A29E;
border-radius:5px;
}

.database_form {
    padding:0;
}

.colourlegend {
    display:flex;
    flex-wrap: nowrap;
    flex-direction: row;
    align-items: center;
    height:30px;
    padding:10px; 
}

.freshlegendstring {
    padding:15px;
    color: #0B0C10;
    background-color:#8FF599;
    text-wrap: nowrap;
    text-overflow: ellipsis;
}

.aboutlegendstring {
    padding:15px;
    background-color:#5CB8FF;
    color: #0B0C10;
    text-wrap: nowrap;
    text-overflow: ellipsis;
}

.spoillegendstring {
    padding:15px;
    background-color:#7E6B8F;
    color:#0B0C10;
    text-wrap: nowrap;
    text-overflow: ellipsis;
}

input[type="text"] {
    width: 90%;
    height: 99%;
    background-color:#1F2833;
    color:#CCFFCC;

}

input[type="apitext"] {
    width: 90%;
    height: 99%;
    background-color:#1F2833;
    color:#CCFFCC;
    font-size: x-large;

}

input[type="date"] {
    width: 90%;
    height: 99%;
    background-color:#1F2833;
    color:#CCFFCC;
}


details {
    user-select: none;
    margin-left:50px;
}

details>summary span.icon {
    width: 24px;
    height: 24px;
    transition: all 1s;
    margin-left:auto;
}

details[open] summary span.icon [
    transform: rotate(180deg);
]

summary {
    display: flex;
    cursor: pointer;
  }
  
  summary::-webkit-details-marker {
    display: none;
    margin-left: 100px;
  }

.help_list {
display:flex;
flex-direction:column;
}

.pantryform {
width:30px;
height:auto;
padding:10px;
border-color:#CCFFCC;
color:#CCFFCC;
border-radius:10px;

}

.apiform {
width:30px;
height:auto;
padding:10px;
border-color:#CCFFCC;
color:#CCFFCC;
border-radius:10px;

}

.button {
    background-color:#1F2833;
    color:#CCFFCC;
    border-style:double;
    font-size:1.5em;
    border-radius:10px;
    border-color:#CCFFCC;
}

.deletebutton {
    background-color:#1F2833;
    color:red;
    border-style:double;
    font-size:0.75em;
    border-radius:10px;
    border-color:red;  
}

.wideimage {
    max-width: 100%;
    height:5%;
}

.recipediv {
    display: flex;
    margin-bottom: 20px;
    min-width: 80%;
    align-items: flex-start;
    justify-content: center;
    padding-right: 2.5%;
}

.ingredientdiv {
    display: flex;
    margin-bottom: 20px;
    flex-wrap: nowrap;
    flex-direction:column;
    justify-content: space-around;
    align-items: flex-start;
    padding-left:10%;
    font-size: x-large;
}

.recipetitlediv {
    display: flex;
    margin-bottom: 20px;
    flex-wrap: nowrap;
    flex-direction: row;
    min-width: 85%;
    justify-content: space-around;
    align-items: flex-start;
    font-size:xx-large;
    text-decoration: underline;
}

.recipeleft {
    display: flex;
    margin-bottom: 20px;
    flex-direction: column;
    align-items: center;
}

.recipecontainer {
    display: flex;
    flex-direction: column;
    margin-bottom: 20px;
    align-items: center;
}

.recipelist {
    display: flex;
    flex-direction:column;
    align-items: flex-start;
    margin-bottom: 20px;
    font-size: x-large;
}

.pantryformheadings {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: space-around;
    align-items: center;
}

.pantryformheadinglabel {
    text-wrap:nowrap;
    text-overflow: ellipsis;
}

.creditsmaindiv {
    display:flex;
    flex-direction:row;
    margin-left:5%;
}

.creditstitlediv {
    margin-left:5%;
}

.creditsstories {
    margin-left:3%;
    margin-right:3%;
}

.creditindcontainer {
    max-height:40%;
}

.creditlinks {
    text-align:center
}

